--- a/fontend/package.json
+++ b/fontend/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
     "primeng": "^16.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
